[package]
name = "bld-governance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
description = "Three-tier governance, audit log, session replay, human-in-the-loop elicitation, secret filter (ADR-0011, ADR-0015)."

[lib]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
tempfile = "3"

# No unwrap / expect allowed in this crate (docs/01_CONSTITUTION_AND_PROGRAM.md §3 Rust style, ADR-0015).
