[package]
name = "bld-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
description = "MCP (Model Context Protocol 2025-11-25) transport for BLD. Wire protocol for agent <-> editor."

[lib]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, optional = true }
thiserror = { workspace = true }

[features]
default = []
runtime = ["dep:tokio"]
