[package]
name = "bld-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
description = "MCP (Model Context Protocol 2025-11-25) transport for BLD. Wire protocol for agent <-> editor."

[lib]

[features]
default = []
# `runtime` pulls in the tokio stdio server. Off by default so pure-logic
# unit tests stay fast.
runtime = ["dep:tokio", "dep:tokio-util", "dep:futures"]
# `rmcp` will switch the transport to the official rmcp crate. Defined but
# feature-gated off until Phase 9B drops — the pure-Rust transport here
# conforms to the same wire protocol (ADR-0011 §2.1).
rmcp-transport = ["dep:rmcp", "runtime"]

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
schemars   = { workspace = true }
async-trait = { workspace = true }

tokio       = { workspace = true, optional = true }
tokio-util  = { workspace = true, optional = true }
futures     = { workspace = true, optional = true }
rmcp        = { workspace = true, optional = true }

bld-tools       = { path = "../bld-tools" }
bld-governance  = { path = "../bld-governance" }

[dev-dependencies]
tokio = { workspace = true }
futures = { workspace = true }
